@@ -1,3 +1,7 @@
+Nov 01, 2007 - chris
+o added generic record filters - ham_add_record_filter and 
+    ham_remove_record_filter
+
 Oct 28, 2007 - chris
 o finished AES encryption; a new function was added: ham_enable_encryption()
 o fixed bug in configure.in; on some systems, the call to getpagesize()
